# marker

./: .gitignore  DESIGN.md  README.md  index.html  install.sh  package.json  pnpm-lock.yaml  tsconfig.json  uninstall.sh  vite.config.ts
.github/workflows/: release.yml
examples/: sample.md
scripts/: bump-version.sh  local-install.sh
src/: main.ts  render.ts  settings.ts  sidebar.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  markdown.rs  watcher.rs
src/styles/: app.css  highlight.css  markdown.css
